# sentinel-core

./: Cargo.toml  README.md
src/: dna.rs  lib.rs  types.rs
src/math/: mod.rs  model.rs  zscore.rs
src/risk/: engine.rs  mod.rs
